Update to compile on Java 11